2020-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3003.c:
	  Regression test for bug #3003 (disabled until bug is fixed).

2020-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/iso646.h,
	  support/regression/tests/iso646.c:
	  Fix compl macro.

2020-05-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c: Fix bug #2827

2020-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/ralloc.c,
	  src/pic16/glue.c,
	  src/pic16/pcode.c,
	  src/pic16/ralloc.c,
	  src/z80/main.c:
	  Improve file open error messages (patch by jbit).

2020-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix link to wiki (was still pointing at previous, no-longer-existing wiki).

2020-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3002.c:
	  Fix bug #3002.
	* device/lib/*/Makefile.in:
	  Compile libraries with --max-allocs-per-node 25000 for more optimization.

2020-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/wchar.c:
	  Fix bug #2572

2020-05-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/wchar.c: fix bug #2572

2020-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/valdiag/tests/enum.c,
	  support/regression/tests/enum.c:
	  Fix handling of trailing comma after enumerator list.

2020-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Fix bug #2972 for tlcs90.
	* support/valdiag/Makefile.in:
	  Fix bug #2971.
	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Align grammar more closely with C2X draft N2479.

2020-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3001.

2020-05-05 Philipp Klaus Krause <pkk AT spth.de>
